- Fixed bug #52051 (handling of case sensitivity of old-style constructors changed in 5.3+)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@300407 c90b9560-bf6c-de11-be94-00142212c4b1